[package]
name = "rok-bytecode"
version = "0.1.0"
edition = "2024"

[dependencies]
smallvec = "1.13.2"
cfg-if = "1.0.3"
indexmap = "2.11.1"
libffi = "4.1.2"
dynasm = "4.0.0"
dynasmrt = "4.0.0"
once_cell = "1.21.3"

[[example]]
name = "lower_fib"
path = "examples/lower_fib.rs"

[[example]]
name = "call_intrin"
path = "examples/call_intrin.rs"

[profile.release]
opt-level = 3
panic = "abort"
codegen-units = 1
lto = "fat"
debug = false
strip = true
overflow-checks = false

# also: set RUSTFLAGS="-C force-frame-pointers=yes"
[profile.profiling]
inherits = "release"
debug = true                      # keep DWARF symbols
split-debuginfo = "packed"        # so perf can find them easily (Linux)
strip = "none"                    # don’t strip symbols
lto = false
codegen-units = 16
overflow-checks = false
panic = "abort"                   # optional: less noise, smaller code

