[package]
name = "rok_middleend"
version = "0.1.0"
edition = "2024"
authors = ["Mark Tyrkba <marktyrkba456@gmail.com>"]
readme = "README.md"
license = "MIT OR APACHE"
repository = "https://github.com/rakivo/rok-middleend"
keywords = ["bytecode", "compiler", "interpreter", "vm", "assembly", "codegen"]
description = "An experimental bytecode format for (`rok`) compiler"
categories = ["development-tools", "programming-languages", "virtual-machines"]
exclude = ["assets/*", "README.md"]

[dependencies]
cfg-if.workspace = true
indexmap.workspace = true
parking_lot.workspace = true
nohash-hasher.workspace = true
smallvec.workspace = true
rustc-hash.workspace = true
paste.workspace = true
